--- a/PortFolio/style.css
+++ b/PortFolio/style.css
@@ -1,9 +1,81 @@
+html {
+  font-size: 100%;
+  background-color: #000;
+  color: #fff;
+}
+
 body {
   margin: 0;
   padding: 0;
 }
 
+#container {
+  margin: 0 auto;
+  padding: 0 4%;
+  max-width: 1100px;
+}
+
 #header {
   background-color: #000;
+  color: #fff;
+  height: 40px;
+}
+
+#header nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+  margin: 0;
+  height: 40px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#header nav a {
+  width: 10%;
+  color: #fff;
+  text-decoration: none;
+  position: relative;
+}
+
+#header nav a::after {
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  content: '';
+  width: 70%;
+  height: 2px;
+  background: #fff;
+  -webkit-transform: scale(0, 1);
+          transform: scale(0, 1);
+  -webkit-transform-origin: left top;
+          transform-origin: left top;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+#header nav a:hover::after {
+  -webkit-transform: scale(1, 1);
+          transform: scale(1, 1);
+}
+
+.content {
+  text-align: center;
+  margin-top: 10%;
+}
+
+.content h2 {
+  font-family: 'Philosopher', serif;
+}
+
+.content p {
+  margin: 10px 4%;
 }
 /*# sourceMappingURL=style.css.map */
