--- a/PortFolio/style.scss
+++ b/PortFolio/style.scss
@@ -1,8 +1,62 @@
+@charset "UTF-8";
+html {
+  font-size: 100%;
+  background-color: #000;
+  color: #fff;
+}
 body {
   margin: 0;
   padding: 0;
 }
+#container {
+  margin: 0 auto;
+  padding: 0 4%;
+  max-width: 1100px;
+}
 
 #header {
   background-color: #000;
+  color: #fff;
+  height: 40px;
+  nav {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    margin: 0;
+    // 親要素の高さに合わせる
+    height: 40px;
+    align-items: center;
+    a {
+      width: 10%;
+      color: #fff;
+      text-decoration: none;
+      position: relative;
+      &::after {
+        position: absolute;
+        bottom: -4px;
+        left: 0;
+        content: '';
+        width: 70%;
+        height: 2px;
+        background: #fff;
+        transform: scale(0, 1);
+        transform-origin: left top;
+        transition: transform 0.3s;
+      }
+      &:hover::after {
+        transform: scale(1, 1);
+      }
+    }
+  }
+}
+
+.content {
+  text-align: center;
+  margin-top: 10%;
+  h2 {
+    font-family: 'Philosopher', serif;
+  }
+  p {
+    margin: 10px 4%;
+  }
 }
