--- a/practice/css/style.css
+++ b/practice/css/style.css
@@ -101,29 +101,26 @@ li:first-of-type {
 }
 
 .item {
-  width: 5rem;
+  width: 100%;
   height: 5rem;
   background: #fff;
 }
 
 .item1 {
   background: #ff0000;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-negative: 3;
+      flex-shrink: 3;
 }
 
 .item2 {
   background: #00ff00;
-  -webkit-box-flex: 2;
-      -ms-flex-positive: 2;
-          flex-grow: 2;
+  -ms-flex-negative: 4;
+      flex-shrink: 4;
 }
 
 .item3 {
   background: #0000ff;
-  -webkit-box-flex: 3;
-      -ms-flex-positive: 3;
-          flex-grow: 3;
+  -ms-flex-negative: 5;
+      flex-shrink: 5;
 }
 /*# sourceMappingURL=style.css.map */
