--- a/practice/css/style.css
+++ b/practice/css/style.css
@@ -101,26 +101,29 @@ li:first-of-type {
 }
 
 .item {
-  width: 10rem;
+  width: 100%;
   height: 5rem;
   background: #fff;
 }
 
 .item1 {
   background: #ff0000;
-  -ms-flex-preferred-size: 15rem;
-      flex-basis: 15rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .item2 {
   background: #00ff00;
-  -ms-flex-preferred-size: 15rem;
-      flex-basis: 15rem;
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
 }
 
 .item3 {
   background: #0000ff;
-  -ms-flex-preferred-size: 15rem;
-      flex-basis: 15rem;
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
 }
 /*# sourceMappingURL=style.css.map */
