--- a/your-name’s-portfolio/css/style.css
+++ b/your-name’s-portfolio/css/style.css
@@ -125,11 +125,11 @@ h2 {
   line-height: 33px;
   padding-left: 18px;
 }
-.about-image-area {
+.about-img-area {
   width: 50%;
   max-width: 400px;
 }
-.about-image-area img {
+.about-img-area img {
   width: 100%;
 }
 #service {
@@ -168,7 +168,7 @@ h2 {
   justify-content: space-between;
 }
 .work-content {
-  width: 100px;
+  width: 100%;
 }
 .work-content:not(:last-of-type) {
   margin-right: 40px;
@@ -266,4 +266,220 @@ h2 {
 }
 .sns-area img:not(:last-of-type) {
   margin-right: 6px;
+}
+@media screen and (min-width: 768px) {
+  .pc_none {
+    display: none !important;
+  }
+}
+@media screen and (max-width: 768px) {
+  .sp_none {
+    display: none !important;
+  }
+  #container {
+    font-size: 16px;
+  }
+  h2 {
+    font-size: 50px;
+  }
+  .title {
+    margin: 8px 20px;
+    font-size: 30px;
+    left: 0;
+    top: 0;
+  }
+  #nav-open {
+    background: #000;
+    width: 34px;
+    height: 34px;
+    position: fixed;
+    right: 0;
+    top: 0;
+    padding: 18px;
+    z-index: 9998;
+  }
+  #nav-open span,
+  #nav-open span:before,
+  #nav-open span::after {
+    position: absolute;
+    transition: all 0.4s;
+    height: 4px;
+    width: 40px;
+    border-radius: 2px;
+    background: #fff;
+    display: block;
+    content: '';
+    cursor: pointer;
+    z-index: 9999;
+  }
+  #nav-open span:before {
+    bottom: -15px;
+  }
+  #nav-open span:after {
+    bottom: -30px;
+  }
+  #nav-open.active span {
+    -webkit-transform: translateY(15px) rotate(-45deg);
+    transform: translateY(15px) rotate(-45deg);
+  }
+  #nav-open.active span::before {
+    -webkit-transform: translateY(-8px) rotate(45deg);
+    transform: translateY(-8px) rotate(45deg);
+    opacity: 0;
+  }
+  #nav-open.active span::after {
+    -webkit-transform: translateY(-30px) rotate(45deg);
+    transform: translateY(-30px) rotate(90deg);
+  }
+  #nav-content {
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    transition: 0.6s ease-out;
+  }
+  #nav-content.open {
+    display: block;
+    opacity: 1;
+    overflow: auto;
+    position: fixed;
+    z-index: 9997;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    opacity: 0.8;
+  }
+  #nav-content a {
+    color: #000;
+    opacity: 1;
+  }
+  .nav-list {
+    display: block;
+    margin-top: 100px;
+    padding: 0;
+    font-size: 50px;
+  }
+  .nav-list li {
+    text-align: center;
+    margin-bottom: 20px;
+    padding-bottom: 14px;
+    border-bottom: 2px solid #000;
+  }
+  .nav-list li:first-of-type {
+    position: static;
+  }
+  .nav-list li:not(:first-of-type) {
+    margin-left: 0;
+  }
+  #main {
+    height: 600px;
+  }
+  #main img {
+    height: 600px;
+  }
+  #main h1 {
+    font-size: 60px;
+    word-spacing: normal;
+  }
+  #about {
+    padding: 30px 20px 40px;
+  }
+  #about h2 {
+    margin-bottom: 8px;
+  }
+  .about-flex {
+    flex-wrap: wrap;
+  }
+  .about-text-area {
+    width: 100%;
+    margin-right: 0;
+  }
+  .about-text-area ul {
+    margin-top: 34px;
+    padding-left: 14px;
+  }
+  .about-img-area {
+    width: 100%;
+    margin: 0 auto;
+  }
+  #service {
+    padding: 26px 20px 40px;
+  }
+  #service h2 {
+    margin-bottom: 8px;
+  }
+  .service-list {
+    /* display:flex;の打ち消し */
+    display: block;
+  }
+  .service-content:not(:last-of-type) {
+    margin-right: 0;
+    margin-bottom: 44px;
+  }
+  #works {
+    padding: 30px 20px 40px;
+  }
+  #works h2 {
+    margin-bottom: 8px;
+  }
+  .work-list {
+    display: block;
+  }
+  .work-content:not(:last-of-type) {
+    margin-right: 0;
+    margin-bottom: 36px;
+  }
+  #contact {
+    padding: 30px 20px 40px;
+  }
+  #contact h2 {
+    margin-bottom: 6px;
+  }
+  #contact .summary {
+    margin-bottom: 14px;
+  }
+  .contact-form table {
+    margin-bottom: 22px;
+  }
+  .contact-form table td {
+    width: 100% !important;
+    /* 要素に幅を指定したい, inline-blockでもよい */
+    /* これをすることでテーブル幅が広がり、縦並びになる */
+    display: block;
+  }
+  .contact-form input[type='text'],
+  .contact-form input[type='email'] {
+    margin-bottom: 18px;
+    height: 46px;
+  }
+  .contact-form input[type='submit'] {
+    width: 150px;
+    font-size: 20px;
+  }
+  .footer-nav {
+    padding: 0 60px;
+    margin-bottom: 10px;
+  }
+  .footer-nav ul {
+    flex-wrap: wrap;
+    padding: 0;
+  }
+  .footer-nav li:not(:last-of-type) {
+    margin-right: 0;
+    width: 50%;
+  }
+  .footer-nav li:last-of-type {
+    width: 50%;
+  }
+  .footer-box {
+    padding: 16px 20px 60px;
+  }
+  .footer-box p {
+    font-size: 25px;
+  }
+  .sns-area {
+    float: unset;
+    margin-top: 30px;
+  }
 }
