--- a/your-name’s-portfolio/css/style.css
+++ b/your-name’s-portfolio/css/style.css
@@ -2,7 +2,7 @@
 
 html {
   margin: 0;
-  font-family: Adbbe-arabic, sans-serif;
+  font-family: 00-arabic, sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -50,7 +50,7 @@ h2 {
 .title {
   position: absolute;
   left: 60px;
-  top: 60px;
+  top: 6px;
   z-index: 1;
 }
 .nav-content {
@@ -64,14 +64,12 @@ h2 {
 .nav_list li:not(:first-of-type) {
   margin-left: 30px;
 }
-
 #main {
   width: 100%;
   height: 550px;
   position: relative;
   overflow: hidden;
 }
-
 #main::after {
   content: '';
   background-color: rgba(0, 0, 0, 0.4);
@@ -81,12 +79,10 @@ h2 {
   top: 0;
   bottom: 0;
 }
-
 #main img {
   height: 550px;
   object-fit: cover;
 }
-
 #main h1 {
   font-size: 100px;
   white-space: nowrap;
@@ -98,11 +94,9 @@ h2 {
   -webkit-transform: translateY(-50%) translateX(-50%);
   z-index: 99;
 }
-
 #about {
   padding: 30px 60px;
 }
-
 #about h2 {
   margin-bottom: 24px;
 }
@@ -162,7 +156,7 @@ h2 {
   padding: 30px 60px 38px;
 }
 .work-list {
-  font-style: 15ps;
+  font-size: 15px;
   text-align: center;
   display: flex;
   justify-content: space-between;
@@ -258,7 +252,7 @@ h2 {
 .footer-nav li:not(:last-of-type) {
   margin-right: 30px;
 }
-.copy-right {
+.copyright {
   margin-bottom: -10px;
 }
 .sns-area {
@@ -379,8 +373,9 @@ h2 {
     height: 600px;
   }
   #main h1 {
-    font-size: 60px;
-    word-spacing: normal;
+    font-size: 80px;
+    white-space: normal;
+    text-align: center;
   }
   #about {
     padding: 30px 20px 40px;
