--- a/your-name’s-portfolio/css/style.css
+++ b/your-name’s-portfolio/css/style.css
@@ -1,10 +1,29 @@
 @charset 'utf-8';
 
+/* Color Theme Swatches in Hex */
+.建築-1-hex {
+  color: #324e73;
+}
+.建築-2-hex {
+  color: #5e9abf;
+}
+.建築-3-hex {
+  color: #8fc4d9;
+}
+.建築-4-hex {
+  color: #99a637;
+}
+.建築-5-hex {
+  color: #6b732d;
+}
+
 html {
   margin: 0;
-  font-family: 00-arabic, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-style: normal;
+  background-color: #324e73;
+  color: #fff;
 }
 
 p,
@@ -14,7 +33,7 @@ h3,
 h4,
 a {
   margin: 0;
-  color: #30353a;
+  color: #fff;
 }
 a {
   text-decoration: none;
@@ -33,7 +52,10 @@ h2 {
   line-height: 33px;
 }
 .bg-gray {
-  background-color: #efefef;
+  background-color: gray;
+}
+.bg-c-blue {
+  background-color: #5e9abf;
 }
 .header {
   width: 100%;
@@ -45,7 +67,7 @@ h2 {
   list-style-type: none;
 }
 .header a {
-  color: #fff;
+  color: #8fc4d9;
 }
 .title {
   position: absolute;
@@ -102,6 +124,7 @@ h2 {
 }
 .about-flex {
   display: flex;
+  flex-direction: row-reverse;
   justify-content: space-between;
   max-width: 960px;
   margin: 0 auto;
@@ -109,7 +132,7 @@ h2 {
 .about-text-area {
   display: inline-block;
   width: 50%;
-  margin-right: 24px;
+  margin-left: 24px;
 }
 .about-text-area p {
   line-height: 33px;
@@ -119,6 +142,13 @@ h2 {
   line-height: 33px;
   padding-left: 18px;
 }
+.about-text-area li {
+  list-style: none;
+  color: #fff;
+}
+.about-text-area li::before {
+  content: '#';
+}
 .about-img-area {
   width: 50%;
   max-width: 400px;
@@ -127,15 +157,16 @@ h2 {
   width: 100%;
 }
 #service {
-  padding: 30px 145px 48px;
+  padding: 4% 145px 48px;
 }
 .service-list {
   width: 100%;
   margin: 0 auto;
   font-size: 15px;
   text-align: center;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 24px;
 }
 .service-content {
   width: 100%;
@@ -158,8 +189,9 @@ h2 {
 .work-list {
   font-size: 15px;
   text-align: center;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .work-content {
   width: 100%;
@@ -171,10 +203,38 @@ h2 {
   width: 100%;
   margin-bottom: 20px;
 }
+.work-content a:hover {
+  cursor: pointer;
+}
 .work-content p {
   line-height: 25px;
   margin: -6px 10px 0;
 }
+/* hobby */
+#hobby {
+  padding: 2rem 4% 3.25rem;
+}
+#hobby h3 {
+  text-align: center;
+  margin: 1rem 0 2rem;
+}
+.hobby-list {
+  display: flex;
+}
+.hobby-content {
+  width: 100%;
+}
+.hobby-content:not(:first-of-type) {
+  margin-left: 5rem;
+}
+.hobby-content img {
+  width: 100%;
+}
+.hobby-content p {
+  text-align: center;
+  margin-top: 1.5rem;
+}
+/* contact */
 #contact {
   padding: 30px 166px 50px;
 }
@@ -394,6 +454,13 @@ h2 {
     margin-top: 34px;
     padding-left: 14px;
   }
+  .about-text-area li {
+    list-style: none;
+    color: #fff;
+  }
+  .about-text-area li::before {
+    content: '#';
+  }
   .about-img-area {
     width: 100%;
     margin: 0 auto;
@@ -424,6 +491,25 @@ h2 {
   .work-content:not(:last-of-type) {
     margin-right: 0;
     margin-bottom: 36px;
+  }
+  #hobby {
+    padding: 30px 20px 40px;
+  }
+  #hobby h2 {
+    margin-bottom: 0.5rem;
+  }
+  #hobby h3 {
+    margin-bottom: 1.5rem;
+  }
+  .hobby-list {
+    display: block;
+  }
+  .hobby-content:not(:first-of-type) {
+    margin-top: 1rem;
+    margin-left: 0rem;
+  }
+  .hobby-content p {
+    margin-top: 0.5rem;
   }
   #contact {
     padding: 30px 20px 40px;
