--- a/MyPortfolio/css/style.scss
+++ b/MyPortfolio/css/style.scss
@@ -313,3 +313,17 @@ footer {
     }
   }
 }
+@media screen and (max-width: 656px) {
+  // works
+  #works {
+    .item {
+      display: block;
+      img {
+        width: 100%;
+      }
+      label {
+        padding: 0 2rem;
+      }
+    }
+  }
+}
