--- a/MyPortfolio/css/style.scss
+++ b/MyPortfolio/css/style.scss
@@ -117,6 +117,18 @@ h6 {
   }
 }
 
+.btn {
+  padding: 1rem 2rem;
+  background-color: #e1fcea;
+  width: 50%;
+  margin-top: 3rem;
+  color: #000;
+  &:hover {
+    background-color: #d8f2d9;
+    cursor: pointer;
+  }
+}
+
 .html {
   background-color: #fa6b6b;
   color: #fff;
@@ -245,17 +257,23 @@ nav {
   h1 {
     text-align: center;
   }
-  input,
-  textarea {
-    background-color: rgba(237, 234, 230, 0.8);
-    border: none;
-    width: 100%;
-    height: 2rem;
-    padding: 1.8rem 1.5rem;
-  }
-  textarea {
-    height: 20rem;
-    resize: none;
+  form {
+    input[type='text'],
+    input[type='email'],
+    textarea {
+      background-color: rgba(237, 234, 230, 0.8);
+      border: none;
+      width: 100%;
+      height: 2rem;
+      padding: 1.8rem 1.5rem;
+    }
+    textarea {
+      height: 20rem;
+      resize: none;
+    }
+    div {
+      text-align: center;
+    }
   }
 }
 
