--- a/TheLittleCafe/css/style.css
+++ b/TheLittleCafe/css/style.css
@@ -185,7 +185,7 @@ header nav ul li:not(:last-of-type) {
 #about {
   text-align: center;
   background-color: #0000000d;
-  height: 478px;
+  padding-bottom: 48px;
 }
 
 #about h1 {
@@ -196,29 +196,10 @@ header nav ul li:not(:last-of-type) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 0 39px;
-}
-
-#about .about-contents .about-item {
-  width: 471px;
-}
-
-#about .about-contents .about-item h2 {
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 1.5;
-}
-
-#about .about-contents .about-item p {
-  font-size: 18px;
-  font-weight: 200;
-  color: #505050;
-  margin: 35px 0 34px;
-  line-height: 1.83;
-}
-
-#about .about-contents .about-item img {
-  width: 450px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
 }
 
 footer {
@@ -249,6 +230,9 @@ footer p {
     width: 100%;
     margin: 0;
   }
+  .contents-wrapper {
+    padding: 0 60px;
+  }
   header {
     display: block;
     padding-left: 20px;
@@ -278,12 +262,10 @@ footer p {
   }
   #about {
     height: 785px;
+    margin: 0 auto;
   }
   #about .about-contents {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+    display: block;
   }
   #about .about-contents .about-item h2 {
     width: 315px;
