--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -155,31 +155,13 @@ header {
 #about {
   text-align: center;
   background-color: #0000000d;
-  height: 478px;
+  padding-bottom: 48px;
   h1 {
     margin: 48px 0;
   }
   .about-contents {
     display: flex;
-    gap: 0 39px;
-    .about-item {
-      width: 471px;
-      h2 {
-        font-weight: 400;
-        font-size: 22px;
-        line-height: 1.5;
-      }
-      p {
-        font-size: 18px;
-        font-weight: 200;
-        color: #505050;
-        margin: 35px 0 34px;
-        line-height: 1.83;
-      }
-      img {
-        width: 450px;
-      }
-    }
+    flex-direction: row-reverse;
   }
 }
 // footer
@@ -210,6 +192,9 @@ footer {
     padding: 0;
     width: 100%;
     margin: 0;
+  }
+  .contents-wrapper {
+    padding: 0 60px;
   }
   // header
   header {
@@ -246,8 +231,9 @@ footer {
   // about
   #about {
     height: 785px;
+    margin: 0 auto;
     .about-contents {
-      flex-direction: column-reverse;
+      display: block;
       .about-item {
         h2 {
           width: 315px;
