--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -9,6 +9,10 @@ ul {
   margin: 0;
   padding: 0;
 }
+body {
+  max-width: 1080px;
+  margin: 0 auto;
+}
 li {
   list-style: none;
 }
@@ -52,13 +56,12 @@ h1 {
 .sp {
   display: none;
 }
-.wrapper {
-  padding: 0 60px;
-  max-width: 1080px;
-  margin: 0 auto;
-}
 .fs-20 {
   font-size: 20px;
+}
+.wrapper {
+  padding: 0 60px;
+  margin: 0 auto;
 }
 .contents-wrapper {
   padding: 0 60px;
@@ -76,6 +79,11 @@ h1 {
 }
 .txt-left {
   text-align: left;
+}
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 // header
 header {
@@ -107,7 +115,7 @@ header {
 // top
 #top {
   //   background-image: url('../images/PC/FV.png');
-  background: url('../images/PC/FV.png') center/cover;
+  background: url(../images/PC/FV.png) no-repeat center/contain;
   height: 500px;
   text-align: center;
   position: relative;
@@ -145,7 +153,7 @@ header {
         font-weight: 200;
         font-size: 15px;
         width: 300px;
-        margin: 15px auto;
+        margin: 15px auto 48px;
         text-align: center;
       }
     }
@@ -162,6 +170,24 @@ header {
   .about-contents {
     display: flex;
     flex-direction: row-reverse;
+    .about-item {
+      h2 {
+        font-size: 22px;
+        font-weight: 400;
+        span {
+          display: block;
+        }
+      }
+      p {
+        font-size: 18px;
+        font-weight: 200;
+        color: #505050;
+        width: 95%;
+        span {
+          display: block;
+        }
+      }
+    }
   }
 }
 // footer
@@ -170,14 +196,14 @@ footer {
   height: 92px;
   color: #fff;
   p {
-    padding: 30px 304px 37px 305px;
+    margin: 0 auto;
     text-align: center;
     font-weight: 200;
-    line-height: 1.65;
+    line-height: 92px;
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1199px) {
   // common
   html {
     min-width: 375px;
