--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -27,6 +27,9 @@ h3 {
 .pc {
   display: block;
 }
+.tb {
+  display: none;
+}
 .sp {
   display: none;
 }
@@ -115,7 +118,7 @@ header {
 // top
 #top {
   //   background-image: url('../images/PC/FV.png');
-  background: url(../images/PC/FV.png) no-repeat center/contain;
+  background: url(../images/PC/FV.png) no-repeat center/cover;
   height: 500px;
   text-align: center;
   position: relative;
@@ -141,6 +144,9 @@ header {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 30px;
+    justify-items: center;
+    align-items: center;
+    margin: 0 auto;
     .menu-item {
       width: 300px;
       h2 {
@@ -163,6 +169,7 @@ header {
 #about {
   text-align: center;
   background-color: #0000000d;
+  margin: 0 auto;
   padding-bottom: 48px;
   h1 {
     margin: 48px 0;
@@ -170,7 +177,13 @@ header {
   .about-contents {
     display: flex;
     flex-direction: row-reverse;
+    justify-content: space-between;
+    column-gap: 1rem;
     .about-item {
+      width: 50%;
+      img {
+        width: 100%;
+      }
       h2 {
         font-size: 22px;
         font-weight: 400;
@@ -182,7 +195,6 @@ header {
         font-size: 18px;
         font-weight: 200;
         color: #505050;
-        width: 95%;
         span {
           display: block;
         }
@@ -200,10 +212,29 @@ footer {
     text-align: center;
     font-weight: 200;
     line-height: 92px;
+    font-size: 20px;
   }
 }
-
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 920px) {
+  // about
+  #about {
+    .about-contents {
+      .about-item {
+        h2 {
+          span {
+            display: inline;
+          }
+        }
+        p {
+          span {
+            display: inline;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 670px) {
   // common
   html {
     min-width: 375px;
@@ -214,35 +245,34 @@ footer {
   .sp {
     display: block;
   }
+  .tb {
+    display: block;
+  }
   .wrapper {
-    padding: 0;
-    width: 100%;
-    margin: 0;
+    padding: 0 4%;
+    margin: 0 auto;
   }
   .contents-wrapper {
     padding: 0 60px;
   }
-  // header
-  header {
-    display: block;
-    padding-left: 20px;
+  .flex-column {
+    row-gap: 1rem;
+  }
+  .btn {
+    margin: 0 auto;
   }
   // top
   #top {
-    background-image: url(../images/SP/FV-sp.png);
     p {
       white-space: normal;
-      width: 312px;
-      height: 95px;
+      width: 313px;
       font-size: 35px;
       line-height: 1.7;
-      margin: 0 auto;
     }
   }
   //   menu
   #menu {
-    .contents-wrapper {
-      padding: 0 30px;
+    .menu-contents {
       .menu-item {
         width: 315px;
         h2 {
@@ -251,23 +281,56 @@ footer {
         p {
           line-height: 1.6;
         }
+        img {
+          width: 100%;
+        }
       }
     }
   }
   // about
   #about {
     height: 785px;
-    margin: 0 auto;
     .about-contents {
-      display: block;
+      flex-direction: column;
+      align-items: center;
       .about-item {
+        width: 100%;
+        margin: 0 auto;
         h2 {
-          width: 315px;
+          width: 100%;
         }
         img {
-          width: 315px;
+          width: 100%;
         }
       }
+    }
+  }
+}
+@media screen and (max-width: 375px) {
+  .tb {
+    display: none;
+  }
+  #top {
+    background: url(../images/SP/FV-sp.png);
+    p {
+      top: 40px;
+    }
+  }
+  #menu {
+    .menu-contents {
+      .menu-item {
+        width: 315px;
+      }
+    }
+  }
+  #about {
+    height: 100%;
+    margin: 0 auto;
+    padding-bottom: 50px;
+  }
+  footer {
+    p {
+      font-size: 17px;
     }
   }
 }
