--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -117,8 +117,12 @@ header {
 }
 // top
 #top {
-  //   background-image: url('../images/PC/FV.png');
   background: url(../images/PC/FV.png) no-repeat center/cover;
+  background: image-set(
+      url(../images/PC/FV.png) 1x,
+      url(../images//PC/FV@2x.png) 2x
+    )
+    no-repeat center/cover;
   height: 500px;
   text-align: center;
   position: relative;
@@ -311,7 +315,10 @@ footer {
     display: none;
   }
   #top {
-    background: url(../images/SP/FV-sp.png);
+    background: imageset(
+      url(../images/SP/FV-sp.png) 1x,
+      url(../images/SP/FV-sp@2x.png)
+    );
     p {
       top: 40px;
     }
