--- a/TheLittleCafe/css/style.css
+++ b/TheLittleCafe/css/style.css
@@ -80,6 +80,10 @@ h1::before {
   margin: 0 auto;
 }
 
+.header-wrapper {
+  padding: 0 65px 0 60px;
+}
+
 .contents-wrapper {
   padding: 0 60px;
 }
@@ -158,7 +162,7 @@ header nav ul li:not(:last-of-type) {
 
 #top p {
   position: absolute;
-  top: 34px;
+  top: 43px;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -167,6 +171,7 @@ header nav ul li:not(:last-of-type) {
   font-size: 40px;
   height: 40px;
   white-space: nowrap;
+  line-height: 1.7;
 }
 
 #menu {
@@ -174,7 +179,7 @@ header nav ul li:not(:last-of-type) {
 }
 
 #menu h1 {
-  margin: 58px 0 49px;
+  margin: 49px 0 44px;
 }
 
 #menu .menu-contents {
@@ -197,7 +202,7 @@ header nav ul li:not(:last-of-type) {
 #menu .menu-contents .menu-item h2 {
   font-size: 20px;
   font-weight: 400;
-  margin-top: 30px;
+  margin-top: 25px;
 }
 
 #menu .menu-contents .menu-item p {
@@ -205,8 +210,9 @@ header nav ul li:not(:last-of-type) {
   font-weight: 200;
   font-size: 15px;
   width: 300px;
-  margin: 15px auto 48px;
+  margin: 5px auto 48px;
   text-align: center;
+  line-height: 1.6;
 }
 
 #about {
@@ -217,7 +223,7 @@ header nav ul li:not(:last-of-type) {
 }
 
 #about h1 {
-  margin: 48px 0;
+  margin: 35px 0 42px;
 }
 
 #about .about-contents {
@@ -231,35 +237,36 @@ header nav ul li:not(:last-of-type) {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-column-gap: 1rem;
-          column-gap: 1rem;
+  -webkit-column-gap: 39px;
+          column-gap: 39px;
 }
 
-#about .about-contents .about-item {
-  width: 50%;
+#about .about-contents .about-item-text {
+  width: 471px;
 }
 
-#about .about-contents .about-item img {
-  width: 100%;
-}
-
-#about .about-contents .about-item h2 {
+#about .about-contents .about-item-text h2 {
   font-size: 22px;
   font-weight: 400;
 }
 
-#about .about-contents .about-item h2 span {
+#about .about-contents .about-item-text h2 span {
   display: block;
 }
 
-#about .about-contents .about-item p {
+#about .about-contents .about-item-text p {
   font-size: 18px;
   font-weight: 200;
   color: #505050;
+  line-height: 1.7;
 }
 
-#about .about-contents .about-item p span {
+#about .about-contents .about-item-text p span {
   display: block;
+}
+
+#about .about-contents .about-item-img img {
+  width: 100%;
 }
 
 footer {
@@ -269,7 +276,6 @@ footer {
 }
 
 footer p {
-  margin: 0 auto;
   text-align: center;
   font-weight: 200;
   line-height: 92px;
@@ -357,22 +363,70 @@ footer p {
   .tb {
     display: none;
   }
+  .header-wrapper {
+    padding: 0 181px 0 20px;
+  }
+  .contents-wrapper {
+    padding: 0 30px;
+  }
+  h1::before {
+    bottom: -12.5px;
+  }
+  header #header-title {
+    margin: 17px 0 13px;
+  }
   #top {
-    background: imageset(url(../images/SP/FV-sp.png) 1x, url(../images/SP/FV-sp@2x.png));
+    background: url(../images/SP/FV-sp.png);
+    background: imageset(url(../images/SP/FV-sp.png) 1x, url(../images/SP/FV-sp@2x.png) 2x);
+    height: 550px;
   }
   #top p {
-    top: 40px;
+    top: 38px;
   }
-  #menu .menu-contents .menu-item {
-    width: 315px;
+  #menu h1 {
+    margin: 46.5px 0 40px;
+  }
+  #menu .menu-contents {
+    gap: 28.5px;
+  }
+  #menu .menu-contents .menu-item h2 {
+    margin-top: 15px;
+  }
+  #menu .menu-contents .menu-item p {
+    line-height: 1.7;
+    margin-bottom: 0;
+  }
+  #menu .menu-contents .menu-item:last-of-type {
+    margin-bottom: 43px;
   }
   #about {
     height: 100%;
     margin: 0 auto;
     padding-bottom: 50px;
   }
+  #about h1 {
+    margin-top: 42.5px;
+  }
+  #about .about-contents .about-item-text {
+    width: 100%;
+  }
+  #about .about-contents .about-item-text h2 {
+    margin-top: 22px;
+  }
+  #about .about-contents .about-item-text h2 span {
+    display: inline;
+  }
+  #about .about-contents .about-item-text p {
+    line-height: 1.8;
+    margin: 8px 0 12px;
+  }
+  #about .about-contents .about-item-text .btn {
+    width: 100%;
+  }
   footer p {
     font-size: 17px;
+    line-height: 1.9;
+    padding-top: 27px;
   }
 }
 /*# sourceMappingURL=style.css.map */
