--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -66,6 +66,9 @@ h1 {
   padding: 0 60px;
   margin: 0 auto;
 }
+.header-wrapper {
+  padding: 0 65px 0 60px;
+}
 .contents-wrapper {
   padding: 0 60px;
 }
@@ -128,7 +131,7 @@ header {
   position: relative;
   p {
     position: absolute;
-    top: 34px;
+    top: 43px;
     left: 50%;
     transform: translateX(-50%);
     font-weight: 200;
@@ -136,13 +139,14 @@ header {
     font-size: 40px;
     height: 40px;
     white-space: nowrap;
+    line-height: 1.7;
   }
 }
 // menu
 #menu {
   text-align: center;
   h1 {
-    margin: 58px 0 49px;
+    margin: 49px 0 44px;
   }
   .menu-contents {
     display: grid;
@@ -156,15 +160,16 @@ header {
       h2 {
         font-size: 20px;
         font-weight: 400;
-        margin-top: 30px;
+        margin-top: 25px;
       }
       p {
         color: #505050;
         font-weight: 200;
         font-size: 15px;
         width: 300px;
-        margin: 15px auto 48px;
+        margin: 5px auto 48px;
         text-align: center;
+        line-height: 1.6;
       }
     }
   }
@@ -176,18 +181,15 @@ header {
   margin: 0 auto;
   padding-bottom: 48px;
   h1 {
-    margin: 48px 0;
+    margin: 35px 0 42px;
   }
   .about-contents {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    column-gap: 1rem;
-    .about-item {
-      width: 50%;
-      img {
-        width: 100%;
-      }
+    column-gap: 39px;
+    .about-item-text {
+      width: 471px;
       h2 {
         font-size: 22px;
         font-weight: 400;
@@ -199,9 +201,15 @@ header {
         font-size: 18px;
         font-weight: 200;
         color: #505050;
+        line-height: 1.7;
         span {
           display: block;
         }
+      }
+    }
+    .about-item-img {
+      img {
+        width: 100%;
       }
     }
   }
@@ -212,7 +220,6 @@ footer {
   height: 92px;
   color: #fff;
   p {
-    margin: 0 auto;
     text-align: center;
     font-weight: 200;
     line-height: 92px;
@@ -311,22 +318,56 @@ footer {
   }
 }
 @media screen and (max-width: 375px) {
+  // common
   .tb {
     display: none;
   }
+  .header-wrapper {
+    padding: 0 181px 0 20px;
+  }
+  .contents-wrapper {
+    padding: 0 30px;
+  }
+  h1 {
+    &::before {
+      bottom: -12.5px;
+    }
+  }
+  // header
+  header {
+    #header-title {
+      margin: 17px 0 13px;
+    }
+  }
+  // top
   #top {
+    background: url(../images/SP/FV-sp.png);
     background: imageset(
       url(../images/SP/FV-sp.png) 1x,
-      url(../images/SP/FV-sp@2x.png)
+      url(../images/SP/FV-sp@2x.png) 2x
     );
+    height: 550px;
     p {
-      top: 40px;
+      top: 38px;
     }
   }
   #menu {
+    h1 {
+      margin: 46.5px 0 40px;
+    }
     .menu-contents {
+      gap: 28.5px;
       .menu-item {
-        width: 315px;
+        h2 {
+          margin-top: 15px;
+        }
+        p {
+          line-height: 1.7;
+          margin-bottom: 0;
+        }
+        &:last-of-type {
+          margin-bottom: 43px;
+        }
       }
     }
   }
@@ -334,10 +375,33 @@ footer {
     height: 100%;
     margin: 0 auto;
     padding-bottom: 50px;
+    h1 {
+      margin-top: 42.5px;
+    }
+    .about-contents {
+      .about-item-text {
+        width: 100%;
+        h2 {
+          margin-top: 22px;
+          span {
+            display: inline;
+          }
+        }
+        p {
+          line-height: 1.8;
+          margin: 8px 0 12px;
+        }
+        .btn {
+          width: 100%;
+        }
+      }
+    }
   }
   footer {
     p {
       font-size: 17px;
+      line-height: 1.9;
+      padding-top: 27px;
     }
   }
 }
