--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -346,7 +346,7 @@ footer {
   // top
   #top {
     background: url(../images/SP/FV-sp.png);
-    background: imageset(
+    background: image-set(
       url(../images/SP/FV-sp.png) 1x,
       url(../images/SP/FV-sp@2x.png) 2x
     );
