--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -1,11 +1,11 @@
-@charset 'utf-8';
+@charset "utf-8";
 * {
   margin: 0px;
   padding: 0px;
 }
 html,
 ul {
-  font-family: 'Hiragino Sans', 'メイリオ', sans-serif;
+  font-family: 'ヒラギノ角ゴシック', 'Hiragino Sans', 'メイリオ', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -80,7 +80,7 @@ h1 {
   color: #fff;
   font-size: 25px;
   font-weight: 200;
-  font-family: 'Hiragino Sans', 'メイリオ', sans-serif;
+  font-family: 'ヒラギノ角ゴシック', 'Hiragino Sans', 'メイリオ', sans-serif;
   line-height: 1.72;
 }
 .txt-left {
@@ -177,7 +177,7 @@ header {
 // about
 #about {
   text-align: center;
-  background-color: #0000000d;
+  background-color: rgba(0, 0, 0, 0.05);
   margin: 0 auto;
   padding-bottom: 48px;
   h1 {
