--- a/TheLittleCafe/css/style.css
+++ b/TheLittleCafe/css/style.css
@@ -152,9 +152,12 @@ header nav ul li:not(:last-of-type) {
 }
 
 #top {
-  background: url(../images/PC/FV.png) no-repeat center/cover;
-  background: -webkit-image-set(url(../images/PC/FV.png) 1x, url(../images//PC/FV@2x.png) 2x) no-repeat center/cover;
-  background: image-set(url(../images/PC/FV.png) 1x, url(../images//PC/FV@2x.png) 2x) no-repeat center/cover;
+  background-image: url(../images/PC/FV.png);
+  background-image: -webkit-image-set(url(../images/PC/FV.png) 1x, url(../images//PC/FV@2x.png) 2x);
+  background-image: image-set(url(../images/PC/FV.png) 1x, url(../images//PC/FV@2x.png) 2x);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   height: 500px;
   text-align: center;
   position: relative;
