--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -120,12 +120,14 @@ header {
 }
 // top
 #top {
-  background: url(../images/PC/FV.png) no-repeat center/cover;
-  background: image-set(
-      url(../images/PC/FV.png) 1x,
-      url(../images//PC/FV@2x.png) 2x
-    )
-    no-repeat center/cover;
+  background-image: url(../images/PC/FV.png);
+  background-image: image-set(
+    url(../images/PC/FV.png) 1x,
+    url(../images//PC/FV@2x.png) 2x
+  );
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   height: 500px;
   text-align: center;
   position: relative;
