add header reponsive

--- a/AnimalHospital/css/style.scss
+++ b/AnimalHospital/css/style.scss
@@ -5,11 +5,41 @@
   font-size: 18px;
   font-family: '游ゴシック体', '游ゴシック', 'Yu Gothic', sans-serif;
 }
+.pc {
+  display: block;
+}
+.no-pc {
+  display: none;
+}
 .wrapper {
   padding: 0 100px;
 }
 .header-wrapper {
   padding: 0 99px 0 66px;
+}
+.toggle {
+  width: 71px;
+  height: 50px;
+  background-color: #0d96a0;
+  position: relative;
+  span {
+    margin: 0 auto;
+    display: block;
+    border-bottom: 4px solid #fff;
+    width: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    &:nth-child(1) {
+      top: 13px;
+    }
+    &:nth-child(2) {
+      top: 25.09px;
+    }
+    &:nth-child(3) {
+      top: 37.18px;
+    }
+  }
 }
 // header
 header {
@@ -34,6 +64,36 @@ header {
           margin-left: 10px;
         }
       }
+    }
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .pc {
+    display: none;
+  }
+  .no-pc {
+    display: block;
+  }
+  // header
+  header {
+    #site-title {
+    }
+  }
+}
+@media screen and(max-width: 425px) {
+  .pc {
+    display: none;
+  }
+  .no-pc {
+    display: block;
+  }
+  .header-wrapper {
+    padding: 0;
+  }
+  header {
+    #site-title {
+      margin-left: 20px;
     }
   }
 }
