--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -9,6 +9,9 @@ ul {
   margin: 0;
   padding: 0;
 }
+a {
+  text-decoration: none;
+}
 body {
   max-width: 1080px;
   margin: 0 auto;
@@ -32,6 +35,10 @@ h3 {
 }
 .sp {
   display: none;
+}
+.full-size {
+  width: 100vw;
+  margin: 0 calc(50% - 50vw);
 }
 h1 {
   position: relative;
@@ -321,6 +328,11 @@ footer {
         }
       }
     }
+  }
+}
+@media screen and (max-width: 470px) {
+  .tb {
+    display: none;
   }
 }
 @media screen and (max-width: 375px) {
