--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -79,6 +79,8 @@ h1 {
 }
 .contents-wrapper {
   padding: 0 60px;
+  max-width: 1080px;
+  margin: 0 auto;
 }
 .btn {
   width: 250px;
@@ -188,7 +190,7 @@ header {
 #about {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.05);
-  margin: 0 auto;
+  // margin: 0 auto;
   padding-bottom: 48px;
   h1 {
     margin: 35px 0 42px;
