--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -14,7 +14,7 @@ a {
   color: #505050;
 }
 body {
-  max-width: 1080px;
+  max-width: 1079px;
   margin: 0 auto;
 }
 li {
@@ -30,9 +30,6 @@ h3 {
 }
 .pc {
   display: block;
-}
-.tb {
-  display: none;
 }
 .sp {
   display: none;
@@ -61,12 +58,6 @@ h1 {
   }
 }
 // common
-.pc {
-  display: block;
-}
-.sp {
-  display: none;
-}
 .fs-20 {
   font-size: 20px;
 }
@@ -79,7 +70,7 @@ h1 {
 }
 .contents-wrapper {
   padding: 0 60px;
-  max-width: 1080px;
+  max-width: 1079px;
   margin: 0 auto;
 }
 .btn {
@@ -161,13 +152,24 @@ header {
     margin: 49px 0 44px;
   }
   .menu-contents {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 30px;
+    display: flex;
+    column-gap: 30px;
     justify-items: center;
     align-items: center;
     margin: 0 auto;
+    padding-bottom: 53px;
+    @media screen and (max-width: 1079px) {
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 48px;
+    }
     .menu-item {
+      @media screen and (max-width: 1079px) {
+        width: 100%;
+        &:not(:first-of-type) {
+          margin-top: 33px;
+        }
+      }
       width: 300px;
       h2 {
         font-size: 20px;
@@ -179,9 +181,12 @@ header {
         font-weight: 200;
         font-size: 15px;
         width: 300px;
-        margin: 5px auto 48px;
+        margin: 0 auto;
         text-align: center;
         line-height: 1.6;
+      }
+      img {
+        width: 100%;
       }
     }
   }
@@ -234,37 +239,38 @@ footer {
   p {
     text-align: center;
     font-weight: 200;
-    line-height: 92px;
+    line-height: 85px;
     font-size: 20px;
   }
 }
-@media screen and (max-width: 920px) {
-  // about
+@media screen and (max-width: 1079px) {
+  .pc {
+    display: block;
+  }
   #about {
     .about-contents {
-      .about-item {
+      flex-direction: column;
+      align-items: center;
+      .about-item-img {
+        width: 100%;
+      }
+      .about-item-text {
+        width: 100%;
         h2 {
-          span {
-            display: inline;
-          }
+          margin-top: 20px;
         }
         p {
-          span {
-            display: inline;
-          }
+          margin-top: 38px;
+        }
+        .btn {
+          margin-top: 27px;
+          width: 100%;
         }
       }
     }
   }
 }
-@media screen and (max-width: 862px) {
-  #about {
-    .about-contents {
-      flex-direction: column;
-      align-items: center;
-    }
-  }
-}
+
 @media screen and (max-width: 670px) {
   // common
   html {
@@ -276,73 +282,9 @@ footer {
   .sp {
     display: block;
   }
-  .tb {
-    display: block;
-  }
-  .wrapper {
-    padding: 0 4%;
-    margin: 0 auto;
-  }
-  .contents-wrapper {
-    padding: 0 60px;
-  }
-  .flex-column {
-    row-gap: 1rem;
-  }
-  .btn {
-    margin: 0 auto;
-  }
-  // top
-  #top {
-    p {
-      white-space: normal;
-      width: 313px;
-      font-size: 35px;
-      line-height: 1.7;
-    }
-  }
-  //   menu
-  #menu {
-    .menu-contents {
-      .menu-item {
-        width: 315px;
-        h2 {
-          margin-top: 20px;
-        }
-        p {
-          line-height: 1.6;
-        }
-        img {
-          width: 100%;
-        }
-      }
-    }
-  }
-  // about
-  #about {
-    .about-contents {
-      .about-item-img {
-        width: 100%;
-      }
-      .about-item-text {
-        width: 100%;
-        .btn {
-          width: 100%;
-        }
-      }
-    }
-  }
-}
-@media screen and (max-width: 470px) {
-  .tb {
-    display: none;
-  }
 }
 @media screen and (max-width: 375px) {
   // common
-  .tb {
-    display: none;
-  }
   .header-wrapper {
     padding: 0 181px 0 20px;
   }
@@ -377,8 +319,9 @@ footer {
       margin: 46.5px 0 40px;
     }
     .menu-contents {
-      gap: 28.5px;
+      row-gap: 33px;
       .menu-item {
+        width: 315px;
         h2 {
           margin-top: 15px;
         }
@@ -387,7 +330,10 @@ footer {
           margin-bottom: 0;
         }
         &:last-of-type {
-          margin-bottom: 43px;
+          // margin-bottom: 43px;
+        }
+        &:not(:first-of-type) {
+          margin-top: 0px;
         }
       }
     }
@@ -409,8 +355,8 @@ footer {
           }
         }
         p {
-          line-height: 1.8;
-          margin: 8px 0 12px;
+          line-height: 1.83;
+          margin-top: 24px;
         }
         .btn {
           width: 100%;
@@ -423,6 +369,7 @@ footer {
       font-size: 17px;
       line-height: 1.9;
       padding-top: 27px;
+      letter-spacing: 0.5px;
     }
   }
 }
